@@ -26,16 +26,25 @@ class Roda
     # call content_for without the block:
     #
     #   <%= content_for :foo %>
+    #
+    # If content_for is used multiple times with the same key,
+    # by default, the last call will override previous calls.
+    # If you want to append to the content, pass the :append
+    # option when loading the plugin:
+    #
+    #   plugin :content_for, :append=>true
     module ContentFor
       # Depend on the render plugin, since this plugin only makes
       # sense when the render plugin is used.
-      def self.load_dependencies(app, _options = {})
+      def self.load_dependencies(app, _opts = {})
         app.plugin :render
       end
 
-      # Configure wether to append or overwrite. Overwrite is default.
-      def self.configure(app, options = {})
-        app.opts[:append_content_for] = options[:append] || false
+      # Configure whether to append or overwrite if content_for
+      # is called multiple times to set data. Overwrite is default, use
+      # the :append option to append.
+      def self.configure(app, opts = {})
+        app.opts[:append_content_for] = opts.fetch(:append, false)
       end
 
       module InstanceMethods
@@ -44,41 +53,32 @@ class Roda
         # stored content with the given key, or return nil if there
         # is no content stored with that key.
         def content_for(key, value=nil, &block)
-          if block
-            outvar = render_opts[:template_opts][:outvar]
-            buf_was = instance_variable_get(outvar)
+          append = opts[:append_content_for]
 
-            # clean the output buffer for ERB-based rendering systems
-            instance_variable_set(outvar, String.new)
-            # Render the content.
-            content = Tilt[render_opts[:engine]].new(&block).render
-            # Restore the output buffer
-            instance_variable_set(outvar, buf_was)
+          if block || value
+            if block
+              outvar = render_opts[:template_opts][:outvar]
+              buf_was = instance_variable_get(outvar)
 
-            # Store the content.
-            @_content_for ||= {}
-
-            if opts[:append_content_for]
-              @_content_for[key] ||= []
-              @_content_for[key].push content
-            else
-              @_content_for[key] = content
+              # Use temporary output buffer for ERB-based rendering systems
+              instance_variable_set(outvar, String.new)
+              value = Tilt[render_opts[:engine]].new(&block).render
+              instance_variable_set(outvar, buf_was)
             end
-          elsif value
+
             @_content_for ||= {}
 
-            if opts[:append_content_for]
-              @_content_for[key] ||= []
-              @_content_for[key].push value
+            if append
+              (@_content_for[key] ||= []) << value
             else
               @_content_for[key] = value
             end
-          elsif @_content_for
-            if opts[:append_content_for]
-              @_content_for[key].join('') if @_content_for[key]
-            else
-              @_content_for[key]
+          elsif @_content_for && (value = @_content_for[key])
+            if append
+              value = value.join
             end
+
+            value
           end
         end
       end
