@@ -1,3 +1,7 @@
+= HEAD
+
+* Add content_for plugin :append option to support appending to the existing content (evanleck, jeremyevans) (#66)
+
 = 2.14.0 (2016-05-13)
 
 * Add symbol_status plugin for using symbols as status codes (Papierkorb) (#65)
